Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,6 +230,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.norm.cdf()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "scrolled": true
