--- a/index.ipynb
+++ b/index.ipynb
@@ -230,22 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "st.norm.cdf(z)"
+    "1 - st.norm.cdf(z)"
    ]
   },
   {
