--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -239,18 +239,18 @@
        "0.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 - st.norm.cdf(z)"
+    "1 - st.norm.cdf(np.abs(z))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -261,7 +261,7 @@
        "1.776482112077653e-33"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
